# ntge

./: .gitignore  Cargo.toml  LICENSE  NtgeCore.podspec  README.md  jitpack.yml
.github/workflows/: NtgeApp.yaml  android.yaml  dotnet.yaml  iOS.yml  rust.yml
NtgeApp/: App.xaml  App.xaml.cs  FluentWindow.cs  MainWindow.xaml  MainWindow.xaml.cs  NtgeApp.csproj  Program.cs
NtgeApp/Common/: Consts.cs
NtgeApp/DataSource/: KeySource.cs
NtgeApp/Dialogs/: CreateKeyDialog.xaml  CreateKeyDialog.xaml.cs  Dialog.cs  KeyPickerDialog.xaml  KeyPickerDialog.xaml.cs
NtgeApp/Models/: DecryptKeyModel.cs  EncryptKeyModel.cs  KeyModel.cs  TabItemModel.cs
NtgeApp/Resources/: Icons.xaml  SideBar.xaml
NtgeApp/ViewModels/: DecryptViewModel.cs  EncryptViewModel.cs  KeyPickerViewModel.cs  KeysViewModel.cs  MainViewModel.cs  ViewModelBase.cs
NtgeApp/Views/: DecryptView.xaml  DecryptView.xaml.cs  EncryptView.xaml  EncryptView.xaml.cs  KeysView.xaml  KeysView.xaml.cs
NtgeCore-Android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
NtgeCore-Android/gradle/wrapper/: gradle-wrapper.properties
NtgeCore-Android/ntge/: build.gradle
NtgeCore-Android/ntge/src/androidTest/java/com/dimension/ntge/: Base58Test.kt  Hmac256Test.kt  KeyTest.kt  MessageBenchmark.kt  MessageTest.kt
NtgeCore-Android/ntge/src/main/java/com/dimension/ntge/: Base58.kt  Hmac256.kt  Ntge.kt
NtgeCore-Android/ntge/src/main/java/com/dimension/ntge/ed25519/: Ed25519PrivateKey.kt  Ed25519PublicKey.kt
NtgeCore-Android/ntge/src/main/java/com/dimension/ntge/message/: Decryptor.kt  Encryptor.kt  Message.kt
NtgeCore-Android/ntge/src/main/rust/: Cargo.toml
NtgeCore-Android/ntge/src/main/rust/src/: lib.rs
NtgeCore-Android/ntge/src/test/java/com/dimension/ntge/: ExampleUnitTest.kt
NtgeCore-Android/src/androidTest/: AndroidManifest.xml
NtgeCore-Android/src/androidTest/java/com/dimension/ntge/: Base58Test.kt  ExampleInstrumentedTest.kt  KeyBenchmark.kt  KeyTest.kt  MessageTest.kt  TestUtils.kt
NtgeCore-Android/src/main/java/com/dimension/ntge/: Base58.kt  Ntge.kt  NtgeException.kt
NtgeCore-Android/src/main/java/com/dimension/ntge/ed25519/: Ed25519Keypair.kt  Ed25519PrivateKey.kt  Ed25519PublicKey.kt
NtgeCore-Android/src/main/java/com/dimension/ntge/message/: Decryptor.kt  Encryptor.kt  Message.kt
NtgeCore-Android/src/main/java/com/dimension/ntge/x25519/: X25519FileKey.kt  X25519PrivateKey.kt  X25519PublicKey.kt
NtgeCore-Android/src/main/res/values/: strings.xml
NtgeCore-Android/src/main/rust/: Cargo.toml
NtgeCore-Android/src/main/rust/.cargo/: config
NtgeCore-Android/src/main/rust/src/: lib.rs
NtgeCore-Android/src/test/java/com/dimension/ntge/: ExampleUnitTest.kt
NtgeCore-iOS/: .gitignore  .travis.yml  LICENSE  NtgeCore.podspec  README.md  build.sh
NtgeCore-iOS/Example/: .gitignore  Podfile
NtgeCore-iOS/Example/NtgeCore/: AppDelegate.swift  ViewController.swift
NtgeCore-iOS/Example/NtgeCore.xcodeproj/: project.pbxproj
NtgeCore-iOS/Example/NtgeCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NtgeCore-iOS/Example/NtgeCore.xcodeproj/xcshareddata/xcschemes/: NtgeCore-Example.xcscheme
NtgeCore-iOS/Example/NtgeCore.xcworkspace/: contents.xcworkspacedata
NtgeCore-iOS/Example/NtgeCore/Base.lproj/: LaunchScreen.xib  Main.storyboard
NtgeCore-iOS/Example/Tests/: Tests.swift
NtgeCore-iOS/NtgeCore/Classes/Ed25519/: Ed25519+Keypair.swift  Ed25519+PublicKey.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/Base58/: Base58Monero.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/Ed25519/: Ed25519+Keypair.swift  Ed25519+PrivateKey.swift  Ed25519+PublicKey.swift  Ed25519.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/HMac/: HMac256.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/Message/: Message+Decryptor.swift  Message+Encryptor.swift  Message.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/Rust/: RustArray.swift
NtgeCore-iOS/NtgeCore/Classes/SDK/X25519/: FileKey.swift  X25519+PrivateKey.swift  X25519+PublicKey.swift  X25519.swift
NtgeCore-iOS/NtgeCore/Classes/include/: ntge-core.h
NtgeCore-iOS/NtgeCore/Tests/: NtgeCoreTests+Base58.swift  NtgeCoreTests+Ed25519.swift  NtgeCoreTests+HMac.swift  NtgeCoreTests+Message.swift  NtgeCoreTests+X25519.swift  NtgeCoreTests.swift
NtgeCore.Net/: NtgeCore.Net.sln  README.md
NtgeCore.Net/rust/: Cargo.toml
NtgeCore.Net/rust/src/: lib.rs
NtgeCore.Net/src/: Base58.cs  HMac256.cs  Native.cs  NtgeCore.Net.csproj  NtgeException.cs  RustObject.cs  StringHandle.cs
NtgeCore.Net/src/Ed25519/: Ed25519Keypair.cs  Ed25519PrivateKey.cs  Ed25519PublicKey.cs
NtgeCore.Net/src/Message/: Decryptor.cs  Encryptor.cs  NtgeMessage.cs
NtgeCore.Net/src/X25519/: X25519FileKey.cs  X25519PrivateKey.cs  X25519PublicKey.cs
NtgeCore.Net/test/: Base58Test.cs  HMac256Test.cs  KeyTest.cs  MessageTest.cs  NativeTest.cs  NtgeCore.Net.Test.csproj
ntge/: Cargo.toml  README.md
ntge-android/src/androidTest/java/com/dimension/ntge/: ExampleInstrumentedTest.kt
ntge-android/src/main/: AndroidManifest.xml
ntge-android/src/main/java/com/dimension/ntge/: Ntge.kt
ntge-core/: Cargo.toml  README.md  build.rs
ntge-core/src/: aead.rs  arrays.rs  base58_utils.rs  buffer.rs  ed25519.rs  error.rs  hmac_utils.rs  key_utils.rs  keypair.rs  lib.rs  message.rs  strings.rs  x25519.rs
ntge-core/src/ed25519/: keypair.rs  mod.rs  private.rs  public.rs
ntge-core/src/message/: decryptor.rs  encryptor.rs  mod.rs  recipient.rs  signer.rs
ntge-core/src/wasm/: mod.rs
ntge-core/src/x25519/: filekey.rs  mod.rs  private.rs  public.rs
ntge-core/tests/: ed25519.rs  key_utils.rs  keypair.rs
ntge-core/www/: index.html  index.js  package-lock.json  package.json
ntge/examples/: create.rs  decrypt.rs  encrypt.rs  encrypt_sign.rs  simple.rs  verify.rs
ntge/src/encrypt/: recipient.rs
