[package]
name = "ntge-core"
version = "0.1.0"
authors = ["Yisi Liu <yisiliu@gmail.com>", "CMK <cirno.mainasuk@gmail.com>", "Tlaster <tlaster@outlook.com>", "Brad Gao <ugling88@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.3"
curve25519-dalek = "2.0.0"
rand = "0.7.3"
bech32 = "0.7.2"
x25519-dalek = { version = "0.6.0", features = ["serde"] }
secrecy = "0.6.0"
hkdf = "0.8.0"
hmac = "0.7.1"
sha2 = "0.8.1"
chacha20poly1305 = "0.4.1"
chrono = "0.4.11"
bson = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_bytes = "0.11.3"
bs58 = "0.3.0"

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features=["console"], optional = true }

[features]
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys", "web-sys"]

[target.wasm32-unknown-unknown.dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"