[package]
name = "ntge-core"
version = "0.1.0"
authors = ["Yisi Liu <yisiliu@gmail.com>", "CMK <cirno.mainasuk@gmail.com>", "Tlaster <tlaster@outlook.com>", "Brad Gao <ugling88@hotmail.com>"]
edition = "2018"
build = "build.rs"
exclude = ["./include/*"]
license = "MIT"
homepage = "https://dimension.im"
description = "A cryptography tool that supports file encryption, decryption, signing and verifying."
repository = "https://github.com/DimensionDev/ntge"
readme = "README.md"

[features]
cbindgen-enable = []
drop-log-enable = []

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.14.1"

[dependencies]
ed25519-dalek = "1.0.0-pre.3"
curve25519-dalek = "2.0.0"
rand = "0.7.3"
bech32 = "0.7.2"
x25519-dalek = { version = "0.6.0", features = ["serde"] }
secrecy = "0.6.0"
hkdf = "0.8.0"
hmac = "0.7.1"
sha2 = "0.8.1"
chacha20poly1305 = "0.4.1"
chrono = "0.4.11"
bson = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_bytes = "0.11.3"
bs58 = "0.3.0"
sha3 = "0.8.2"
base64 = "0.12.1"
hex = "0.4.2"
base58-monero = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
