[package]
name = "ntge"
version = "0.1.0"
authors = ["Yisi Liu <yisiliu@gmail.com>", "CMK <cirno.mainasuk@gmail.com>", "Tlaster <tlaster@outlook.com>", "Brad Gao <ugling88@hotmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://dimension.im"
description = "A cryptography CLI tool that supports file encryption, decryption, signing and verifying."
repository = "https://github.com/DimensionDev/ntge"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntge-core = "0.1.0"
dirs = "2.0.2"
log = "0.4.8"
clap = "~2.33.0"
