[package]
name = "ntgedroid"
version = "0.1.0"
authors = ["Tlaster <tlaster@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ntge-core = { path = "../../../../../ntge-core" }
jni = "0.16.0"
base58-monero = "0.2.0"

[workspace]